force-app/main/default/objects/BMCServiceDesk__SYSNode__c/BMCServiceDesk__SYSNode__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store link details for navigators.</description>
    <label>Navigator Links</label>
    <nameField>
        <label>SYS Node Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSNodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>