force-app/main/default/objects/BMCServiceDesk__SYSNode__c/fields/BMCServiceDesk__Index__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Index__c</fullName>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>