force-app/main/default/objects/BMCServiceDesk__SYSNode__c/fields/BMCServiceDesk__Level__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Level__c</fullName>
    <label>Node Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>