force-app/main/default/objects/BMCServiceDesk__SYSNode__c/fields/BMCServiceDesk__Navigator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Navigator__c</fullName>
    <label>FKNavigator</label>
    <referenceTo>BMCServiceDesk__SYSNavigator__c</referenceTo>
    <relationshipLabel>SYS Nodes</relationshipLabel>
    <relationshipName>Nodes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>