force-app/main/default/objects/BMCServiceDesk__SYSNode__c/fields/BMCServiceDesk__PageReference__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PageReference__c</fullName>
    <label>Page Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>