force-app/main/default/objects/BMCServiceDesk__SYSNode__c/fields/BMCServiceDesk__Parent__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKParentNode</label>
    <referenceTo>BMCServiceDesk__SYSNode__c</referenceTo>
    <relationshipLabel>SYS Nodes</relationshipLabel>
    <relationshipName>Nodes</relationshipName>
    <type>Lookup</type>
</CustomField>