force-app/main/default/objects/BMCServiceDesk__SYSNode__c/fields/BMCServiceDesk__Section__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Workspaces</fullName>
                <default>true</default>
                <label>Workspaces</label>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>