force-app/main/default/objects/BMCServiceDesk__SYSNode__c/fields/BMCServiceDesk__Tip__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Tip__c</fullName>
    <label>Tip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>