force-app/main/default/objects/BMCServiceDesk__SYSNode__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>BMCServiceDesk__Navigator__c</columns>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Parent__c</columns>
    <columns>BMCServiceDesk__Level__c</columns>
    <columns>BMCServiceDesk__Index__c</columns>
    <columns>BMCServiceDesk__PageReference__c</columns>
    <columns>BMCServiceDesk__Tip__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>